Fixed the image layout by adding flex wrap

--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding-top: 20px;
+  flex-wrap: wrap;
 }
 
 #product1 .pro {
